field name sync

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,7 +319,9 @@ section.home-features {
 .upload-form .parameters-container {
   display: none;
 }
-
+.upload-form #field-type {
+  display: none;
+}
 .upload-form.dataset-selected > .upload-container {
   max-width: unset;
 }
