--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
       crossorigin="anonymous"
     />
     <!-- <link rel="stylesheet" href="/static/css/home_form_style.css"> -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/static/css/style.css" />
     <title>Welcome</title>
   </head>
