--- a/templates/dpml.html
+++ b/templates/dpml.html
@@ -1,114 +1,165 @@
-<!DOCTYPE html>
-<!-- INPUTS: epsilon, lambda, epochs, degree -->
-<html>
-	<head>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="/static/css/upload_form_style.css">
-		<title>DPML</title>
-	</head>
-<body background="/static/images/background.jpg">
-		
-	<nav id="navbar-example2" class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">PRIVAZ</a>
-		  <ul class="nav justify">
-		  <li class="nav-item">
-		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="home_with_logout">Logout</a>
-		  </li>
-		</ul>	
-	</nav>
-	<div class="row mt-4 text-center">
-		<div class="col-5" id="inputs">
-		<div class="row">
-			<div class="col text-left">Set Privacy Parameter: <br>
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				  	<br>
-				    <span class="input-group-text" id="basic-addon1">epsilon</span>
-				  </div>
-				  <input type="number" step=any class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="epsilon">
-				</div>
-			</div>
-		</div>
-		<div class="text-left">Upload the dataset:</div> <br>
-		<!-- <div class="input-group mb-3">
-		  <div class="input-group-prepend">
-		    <span class="input-group-text" id="inputGroupFileAddon01">Upload Dataset</span>
-		  </div>
-		  <div class="custom-file">
-		    <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="dpml_file" enctype="multipart/form-data">
-		    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-		  </div>
-		</div> -->
-		<form action="dpml_upload_php" method="POST" enctype="multipart/form-data">
-			<input type="file" name="file" id="file" class="hidden">
-				<label for="file">Select file</label>
-						<button type="submit" name="submit"> {{ UPLOAD_STATUS }} </button>
-
-		</form>
-		<div class="text-left">Set Learning Hyperparameters:</div>
-			<!-- INPUT LAMBDA -->
-			<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">Lambda</span>
-				  </div>
-				  <input type="number" step=any class="form-control" placeholder="1.0" aria-label="0.1" aria-describedby="basic-addon1" id="lambda">
-			</div>
-			<!-- INPUT Degree -->
-			<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">Degree</span>
-				  </div>
-				  <input type="number" class="form-control" placeholder="6" aria-label="0.1" aria-describedby="basic-addon1" id="degree">
-			</div>
-			<!-- INPUT EPOCHS -->
-			<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">No. of Epochs</span>
-				  </div>
-				  <input type="number" class="form-control" placeholder="800" aria-label="0.1" aria-describedby="basic-addon1" id="epochs">
-			</div>
-			<!-- INPUT ALPHA -->
-			<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">Alpha,for Gradient Descent</span>
-				  </div>
-				  <input type="number" step=any class="form-control" placeholder="1" aria-label="0.1" aria-describedby="basic-addon1" id="alpha">
-			</div>
-		<!-- ANALYZE BUTTON -->
-		<div class="row">
-			<div class="col">
-				<button type="button" onclick="Analysis3()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
-			</div>			
-		</div>
+{% extends 'form.html' %} {% block formTitle %} Differentially Private Machine
+Learning {% endblock %} {% block formFields %}
+<section class="parameter-section" id="privacy-parameters">
+  <header class="section-header">
+    <h6>Privacy parameters</h6>
+  </header>
+  <div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="epsilon" class="input-group-text">Epsilon</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="epsilon"
+            min="0"
+            max="100"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="epsilon-range"
+      />
     </div>
-		<div class="col">
-			<div id="figure">
-				<img src= {{ source }} alt="Histogram will be displayed here once you click 'Analyze'" id="figure-address">
-			</div>
-		</div>
-	</div>
-
+  </div>
+</section>
+<section class="parameter-section" id="learning-parameters">
+  <header class="section-header">
+    <h6>Learning Hyperparameters</h6>
+  </header>
+  <div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="lambda" class="input-group-text">Lambda</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="lambda"
+            min="0"
+            max="100"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="lambda-range"
+      />
+    </div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="degree" class="input-group-text">Degree</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="degree"
+            min="0"
+            max="100"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="degree-range"
+      />
+    </div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="epochs" class="input-group-text">Epochs</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="epochs"
+            min="0"
+            max="100"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="epochs-range"
+      />
+    </div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="alpha" class="input-group-text">Alpha</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="alpha"
+            min="0"
+            max="100"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="alpha-range"
+      />
+    </div>
+  </div>
+</section>
+{% endblock %} {% block analysisScript %}
 <script type="text/javascript">
-	function Analysis3(){
-		var xhttp = new XMLHttpRequest();
-		var e=document.getElementById("epsilon").value;
-		var lambda=document.getElementById("lambda").value;
-		var degree=document.getElementById("degree").value;
-		var epochs=document.getElementById("epochs").value;
-		var alpha=document.getElementById("alpha").value;
-		xhttp.onreadystatechange = function() {
-		    if (this.readyState == 4 && this.status == 200) {
-		      document.open();
-		      document.write(this.responseText);
-		      document.close();
-		    }
-		  };
-		xhttp.open("GET", "/dpml_process?e="+e+"&lambda="+lambda+"&degree="+degree+"&epochs="+epochs+"&alpha="+alpha, true);
-		xhttp.send();
-	}
+  function Analysis3() {
+    var xhttp = new XMLHttpRequest();
+    var e = document.getElementById("epsilon").value;
+    var lambda = document.getElementById("lambda").value;
+    var degree = document.getElementById("degree").value;
+    var epochs = document.getElementById("epochs").value;
+    var alpha = document.getElementById("alpha").value;
+    xhttp.onreadystatechange = function() {
+      if (this.readyState == 4 && this.status == 200) {
+        document.open();
+        document.write(this.responseText);
+        document.close();
+      }
+    };
+    xhttp.open(
+      "GET",
+      "/dpml_process?e=" +
+        e +
+        "&lambda=" +
+        lambda +
+        "&degree=" +
+        degree +
+        "&epochs=" +
+        epochs +
+        "&alpha=" +
+        alpha,
+      true
+    );
+    xhttp.send();
+  }
 </script>
-</body>
-</html>
+{% endblock %}
