--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,54 @@
 {% extends 'base.html' %}
 {% block content %}
-	<h3>Hi {{ current_user.username }}!</h3>
-	<div class="row mt-4 text-center">
-		<div class="col-6 text-left" id="features">
-			<h1>Features</h1>
-			<ul>
-				<h3><li>Differentialy Private Data Analysis</li>
-				<li>DP Visulaisation</li>
-				<li>Machine Learning Regression</li>
-				<li>Privacy Preserving Dataset Generation</li></h3>
-			</ul>
+<section class="choose-task">
+		<header class="section-header pt-5 pb-4">
+		  <h2 class="bottom-border">Select a task</h2>
+		</header>
+	<div class="container">
+		<div class="row justify-content-around task-options">
+			<div class="col-4 py-3">
+				<a href="upload">
+				<div class="single-feature text-center">
+				  <div class="feature-icon">
+					<img src="/static/images/visualization.png" />
+				  </div>
+				  <div class="feature-content">
+					<h4>Differential Privacy Visualization</h4>
+					<p>
+					  Some quick example text to build on the card title and make up the
+					  bulk of the card's content.
+					</p>
+				  </div>
+				</div>
+				</a>
+			</div>
+			<div class="col-4 py-3">
+				<a href="dpml">
+				<div class="single-feature text-center">
+				  <div class="feature-icon">
+					<img src="/static/images/machine_learning.png" />
+				  </div>
+				  <div class="feature-content">
+					<h4>Differentially Private Machine Learning</h4>
+					<p>
+					  Some quick example text to build on the card title and make up the
+					  bulk of the card's content.
+					</p>
+				  </div>
+				</div>
+				</a>
+			</div>
+			<!-- <div class="col-4" id="choice">
+				<a href="upload" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DP Visualisation</h1></a>
+				<br><br><br>
+				<a href="dpml" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DPML</h1></a></button>
+				<br><br><br>
+				<a href="query" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Query Dataset</h1></a></button>
+				<a href="federatedML" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Federated ML</h1></a></button>
+			</div> -->
 		</div>
-		<div class="col-1"></div>
-		<div class="col-4" id="choice">
-			<br><br><br>
-			<a href="upload" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DP Visualisation</h1></a>
-			<br><br><br>
-			<a href="dpml" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DPML</h1></a></button>
-			<br><br><br>
-			<a href="query" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Query Dataset</h1></a></button>
-			<a href="federatedML" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Federated ML</h1></a></button>
-		</div>
-    </div>
+	</div>
+</section>
 </body>
 </html>
 
