--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,365 +1,216 @@
-{% extends 'base.html' %} {% block content %}
-<section class="upload-full container">
-  <header class="section-header pt-5 pb-4">
-    <h2 class="bottom-border">Federated ML</h2>
+{% extends 'form.html' %} {% block formTitle %} DP Visualization {% endblock %}
+{% block formFields %}
+<section class="parameter-section" id="function-type">
+  <header class="section-header">
+    <h6>Select Function</h6>
   </header>
-  <div class="row justify-content-between align-items-center">
-    <form class="form upload-form px-0 col-12">
-      <div class="upload-container text-center my-3">
-        <div
-          class="d-flex flex-column justify-content-around align-items-center"
-        >
-          <header>
-            <h3 class="bottom-border mb-4">Upload Your Dataset</h3>
-            <h4>Your Dataset</h4>
-          </header>
-          <figure class="file-icon">
-            <img
-              src="/static/images/sheet.png"
-              alt="Data File"
-              title="Data File"
-            />
-            <figcaption class="font-italic pt-3">
-              <div class="file-spec font-weight-bold" id="file-name"></div>
-              <div class="file-spec" id="file-size"></div>
-
-              <div class="upload-caption">
-                Upload your dataset in appropriate format (.xls, .txt, ...)
-                here.
-              </div>
-            </figcaption>
-          </figure>
-          <div class="upload-btns form-row justify-content-around px-0">
-            <div class="col-6 form-group dataset-upload my-0">
-              <label for="select-file" class="btn my-2">Select File</label>
-              <input type="file" id="select-file" accept=".txt,.csv" />
-            </div>
-            <div class="col-6">
-              <a class="btn my-2" id="upload-data">Upload</a>
-            </div>
+  <div class="d-flex justify-content-center functions tab-select">
+    <label class="btn btn-outline" for="function-laplace" data-control="laplace"
+      >Laplace</label
+    >
+    <label
+      class="btn btn-outline"
+      for="function-boundedLaplace"
+      data-control="boundedLaplace"
+      >Bounded Laplace</label
+    >
+    <label
+      class="btn btn-outline"
+      for="function-staircase"
+      data-control="staircase"
+      >Staircase</label
+    >
+    <label
+      class="btn btn-outline"
+      for="function-gaussian"
+      data-control="gaussian"
+      >Gaussian</label
+    >
+    <div class="d-none tab-radios">
+      <input
+        type="radio"
+        class="tab-radio"
+        value="laplace"
+        id="function-laplace"
+        name="function"
+        required
+      />
+      <input
+        type="radio"
+        class="tab-radio"
+        value="boundedLaplace"
+        id="function-boundedLaplace"
+        name="function"
+        required
+      />
+      <input
+        type="radio"
+        value="staircase"
+        id="function-staircase"
+        name="function"
+        class="tab-radio"
+        required
+      />
+      <input
+        type="radio"
+        value="gaussian"
+        id="function-gaussian"
+        name="function"
+        class="tab-radio"
+        required
+      />
+    </div>
+  </div>
+  <div class="invalid-feedback">Please select a regression mechanism.</div>
+</section>
+<section class="parameter-section" id="measure-type">
+  <header class="section-header">
+    <h6>Select Measure</h6>
+  </header>
+  <div class="d-flex justify-content-center measures tab-select">
+    <label class="btn btn-outline" for="measure-mean" data-hide="">Mean</label>
+    <label class="btn btn-outline" for="measure-median" data-hide=""
+      >Median</label
+    >
+    <label class="btn btn-outline" for="measure-mode" data-hide="">Mode</label>
+    <div class="d-none tab-radios">
+      <input
+        type="radio"
+        class="tab-radio"
+        value="mean"
+        id="measure-mean"
+        name="measure"
+        required
+      />
+      <input
+        type="radio"
+        value="median"
+        id="measure-median"
+        name="measure"
+        class="tab-radio"
+        required
+      />
+      <input
+        type="radio"
+        class="tab-radio"
+        value="mode"
+        id="measure-mode"
+        name="measure"
+        required
+      />
+    </div>
+  </div>
+</section>
+<section class="parameter-section" id="greek-parameters">
+  <header class="section-header">
+    <h6>Parameters</h6>
+  </header>
+  <div>
+    <div class="form-row align-items-center my-3" data-hide="">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="epsilon" class="input-group-text">Epsilon</label>
           </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="epsilon"
+            min="0"
+            max="100"
+          />
         </div>
       </div>
-      <div class="parameters-container">
-        <section class="parameter-section" id="function-type">
-          <header class="section-header">
-            <h6>Select Function</h6>
-          </header>
-          <div class="d-flex justify-content-center functions tab-select">
-            <label
-              class="btn btn-outline"
-              for="function-laplace"
-              data-control="laplace"
-              >Laplace</label
-            >
-            <label
-              class="btn btn-outline"
-              for="function-boundedLaplace"
-              data-control="boundedLaplace"
-              >Bounded Laplace</label
-            >
-            <label
-              class="btn btn-outline"
-              for="function-staircase"
-              data-control="staircase"
-              >Staircase</label
-            >
-            <label
-              class="btn btn-outline"
-              for="function-gaussian"
-              data-control="gaussian"
-              >Gaussian</label
-            >
-            <div class="d-none tab-radios">
-              <input
-                type="radio"
-                class="tab-radio"
-                value="laplace"
-                id="function-laplace"
-                name="function"
-              />
-              <input
-                type="radio"
-                class="tab-radio"
-                value="boundedLaplace"
-                id="function-boundedLaplace"
-                name="function"
-              />
-              <input
-                type="radio"
-                value="staircase"
-                id="function-staircase"
-                name="function"
-                class="tab-radio"
-              />
-              <input
-                type="radio"
-                value="gaussian"
-                id="function-gaussian"
-                name="function"
-                class="tab-radio"
-              />
-            </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="100"
+        id="epsilon-range"
+      />
+    </div>
+    <div class="form-row align-items-center my-3" data-hide="laplace staircase">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="delta" class="input-group-text">Delta</label>
           </div>
-        </section>
-        <section class="parameter-section" id="measure-type">
-          <header class="section-header">
-            <h6>Select Measure</h6>
-          </header>
-          <div class="d-flex justify-content-center measures tab-select">
-            <label class="btn btn-outline" for="measure-mean" data-hide=""
-              >Mean</label
-            >
-            <label class="btn btn-outline" for="measure-median" data-hide=""
-              >Median</label
-            >
-            <label class="btn btn-outline" for="measure-mode" data-hide=""
-              >Mode</label
-            >
-            <div class="d-none tab-radios">
-              <input
-                type="radio"
-                class="tab-radio"
-                value="mean"
-                id="measure-mean"
-                name="measure"
-              />
-              <input
-                type="radio"
-                value="median"
-                id="measure-median"
-                name="measure"
-                class="tab-radio"
-              />
-              <input
-                type="radio"
-                class="tab-radio"
-                value="mode"
-                id="measure-mode"
-                name="measure"
-              />
-            </div>
-          </div>
-        </section>
-        <section class="parameter-section" id="greek-parameters">
-          <header class="section-header">
-            <h6>Parameters</h6>
-          </header>
-          <div>
-            <div class="form-row align-items-center my-3" data-hide="">
-              <div class="col-auto">
-                <div class="input-group parameter-input">
-                  <div class="input-group-prepend">
-                    <label for="epsilon" class="input-group-text"
-                      >Epsilon</label
-                    >
-                  </div>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="epsilon"
-                    min="0"
-                    max="100"
-                  />
-                </div>
-              </div>
-              <input
-                type="range"
-                class="custom-range col"
-                min="0"
-                max="100"
-                id="epsilon-range"
-              />
-            </div>
-            <div
-              class="form-row align-items-center my-3"
-              data-hide="laplace staircase"
-            >
-              <div class="col-auto">
-                <div class="input-group parameter-input">
-                  <div class="input-group-prepend">
-                    <label for="delta" class="input-group-text">Delta</label>
-                  </div>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="delta"
-                    min="0"
-                    max="100"
-                  />
-                </div>
-              </div>
-              <input
-                type="range"
-                class="custom-range col"
-                min="0"
-                max="1"
-                step="0.5"
-                id="delta-range"
-              />
-            </div>
-            <div
-              class="form-row align-items-center my-3"
-              data-hide="laplace boundedLaplace gaussian"
-            >
-              <div class="col-auto">
-                <div class="input-group parameter-input">
-                  <div class="input-group-prepend">
-                    <label for="gamma" class="input-group-text">Gamma</label>
-                  </div>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="gamma"
-                    min="0"
-                    max="100"
-                  />
-                </div>
-              </div>
-              <input
-                type="range"
-                class="custom-range col"
-                min="0"
-                max="1"
-                step="0.5"
-                id="gamma-range"
-              />
-            </div>
-          </div>
-        </section>
-        <section class="parameter-section" id="field-type">
-          <header class="section-header">
-            <h6>Setect Field</h6>
-          </header>
-          <div>
-            <div
-              class="d-flex justify-content-center fields flex-wrap tab-select"
-            >
-              <div class="d-none tab-radios"></div>
-            </div>
-            <div class="form-row my-4">
-              <div class="col-6">
-                <div class="input-group parameter-input">
-                  <div class="input-group-prepend">
-                    <label for="low" class="input-group-text">Low</label>
-                  </div>
-                  <input type="number" class="form-control" id="low" />
-                </div>
-              </div>
-              <div class="col-6">
-                <div class="input-group parameter-input">
-                  <div class="input-group-prepend">
-                    <label for="high" class="input-group-text">High</label>
-                  </div>
-                  <input type="number" class="form-control" id="high" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <div class="d-flex justify-items-center">
-          <button
-            type="button"
-            onclick="Analysis3()"
-            class="btn"
-            id="Analyze-Button"
-          >
-            Analyze
-          </button>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="delta"
+            min="0"
+            max="100"
+          />
         </div>
       </div>
-    </form>
-    <div class="data-graph col-6">
-      <div class="graph-container">
-        <div class="graph-pre-caption">
-          Your data will be visualized here after analyzing
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="1"
+        step="0.5"
+        id="delta-range"
+      />
+    </div>
+    <div
+      class="form-row align-items-center my-3"
+      data-hide="laplace boundedLaplace gaussian"
+    >
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="gamma" class="input-group-text">Gamma</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="gamma"
+            min="0"
+            max="100"
+          />
         </div>
-        <img
-          src="/static/images/Laplace1568152268.3212547.png"
-          id="data-histogram"
-        />
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="1"
+        step="0.5"
+        id="gamma-range"
+      />
+    </div>
+  </div>
+</section>
+<section class="parameter-section" id="field-type">
+  <header class="section-header">
+    <h6>SeLect Field</h6>
+  </header>
+  <div>
+    <div class="d-flex justify-content-center fields flex-wrap tab-select">
+      <div class="d-none tab-radios"></div>
+    </div>
+    <div class="form-row my-4">
+      <div class="col-6">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="low" class="input-group-text">Low</label>
+          </div>
+          <input type="number" class="form-control" id="low" required />
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="high" class="input-group-text">High</label>
+          </div>
+          <input type="number" class="form-control" id="high" required />
+        </div>
       </div>
     </div>
   </div>
 </section>
-<!-- <div class="container">
-	<div class="row mt-4 text-center">
-		<div class="col-5" id="inputs">
-		<div class="row">
-			<div class="col-3">
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">epsilon</span>
-				  </div>
-				  <input type="text" class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="epsilon">
-				</div>
-				<br>
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">low</span>
-				  </div>
-				  <input type="text" class="form-control" placeholder="0" aria-label="0.1" aria-describedby="basic-addon1" id="low">
-				</div>
-			</div>
-
-			<div class="col-3">
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">delta</span>
-				  </div>
-				  <input type="text" class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="delta">
-				</div>
-			<br>
-			<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">high</span>
-				  </div>
-				  <input type="text" class="form-control" placeholder="160" aria-label="0.1" aria-describedby="basic-addon1" id="high">
-				</div>
-			</div>
-		</div>
-		<form action="upload_process" method="POST" enctype="multipart/form-data">
-			<input type="file" name="file">
-						<button type="submit" name="submit"> {{ UPLOAD_STATUS }} </button>
-
-		<div class="row">
-			<div class="col-2">
-				<br>
-				<br>
-				<button type="button" class="btn btn-dark">Query</button>
-				<br>
-				<hr>
-				<br>
-				<button type="button" onclick="Analysis3()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
-			</div>
-			<div class="col" >
-				<div class="row">
-					<div class="col">
-					<select class="custom-select" size="10" id="selector">
-					  <option selected>Select Item</option>
-					  {{ OPTIONS_LIST|safe }}
-					</select>
-					</div>
-					<div class="col">
-					<select class="custom-select" size="10" id="measure-selector">
-					  <option selected>Select Measure</option>
-					  <option value="1">Mean</option>
-					  <option value="2">Median</option>
-					  <option value="3">Mode</option>
-					</select>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-		<div class="col">
-			<div id="figure">
-				<img src= {{ source }} alt="Histogram will be displayed here once you click 'Analyze'" id="figure-address">
-			</div>
-		</div>
-	</div>
-	</div> -->
-{% endblock %} {% block scripts %}
+{% endblock %} {% block analysisScript %}
 <script type="text/javascript">
   function Analysis() {
     var xhttp = new XMLHttpRequest();
@@ -404,6 +255,10 @@
 </script>
 <script type="text/javascript">
   function Analysis3() {
+    if ($(".upload-form")[0].checkValidity() === false) {
+      $(".upload-form").addClass("was-validated");
+      return;
+    }
     var xhttp = new XMLHttpRequest();
     var e = document.getElementById("epsilon").value;
     var d = document.getElementById("delta").value;
@@ -417,14 +272,23 @@
     var low = document.getElementById("low").value;
     var high = document.getElementById("high").value;
 
+    $(".data-graph")
+      .addClass("visual-loading")
+      .removeClass("visual-available");
+    $("#Analyze-Button")
+      .prop("disabled", true)
+      .addClass("disabled");
     xhttp.onreadystatechange = function() {
       if (this.readyState == 4 && this.status == 200) {
         $("#data-histogram")
           .attr("src", this.responseText)
           .show();
-        // document.open();
-        // document.write(this.responseText);
-        // document.close();
+        $(".data-graph")
+          .addClass("visual-available")
+          .removeClass("visual-loading");
+        $("#Analyze-Button")
+          .prop("disabled", false)
+          .removeClass("disabled");
       }
     };
     xhttp.open(
@@ -450,5 +314,4 @@
     xhttp.send();
   }
 </script>
-<script type="text/javascript" src="/static/js/action.js"></script>
 {% endblock %}
