--- a/templates/home.html
+++ b/templates/home.html
@@ -93,8 +93,9 @@ preContent %}
                   placeholder="Username"
                   required
                   data-toggle="tooltip"
+                  data-trigger="manual"
                   data-placement="top"
-                  title="Username already taken"
+                  data-title="Username already taken"
                 />
               </div>
               <div class="form-group col-12 px-0">
@@ -106,6 +107,7 @@ preContent %}
                   placeholder="Email Address"
                   required
                   data-toggle="tooltip"
+                  data-trigger="manual"
                   data-placement="top"
                   title="Email already signed-up"
                 />
