--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     />
     <!-- <link rel="stylesheet" href="/static/css/home_form_style.css"> -->
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,800&display=swap"
+      href="https://fonts.googleapis.com/css?family=Raleway:700,800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/static/css/style.css" />
