--- a/templates/home.html
+++ b/templates/home.html
@@ -31,6 +31,7 @@ preContent %}
               id="login-username"
               placeholder="Username"
               name="username"
+              required
             />
           </div>
           <div class="form-group col-12 px-0">
@@ -45,6 +46,7 @@ preContent %}
               data-trigger="manual"
               data-placement="top"
               data-title="Wrong Username-password combination"
+              required
             />
           </div>
           <div class="custom-control custom-checkbox text-left my-2">
@@ -290,7 +292,7 @@ preContent %}
     xhttp.onreadystatechange = function() {
       if (this.readyState == 4 && this.status == 200) {
         console.log("inside" + this.responseText);
-        if (this.responseText == false) {
+        if (this.responseText == "False") {
           console.log(this.responseText);
           $("#login-password").tooltip("show");
         } else {
