--- a/templates/form.html
+++ b/templates/form.html
@@ -22,7 +22,9 @@
             <figcaption class="font-italic pt-3">
               <div class="file-spec font-weight-bold" id="file-name"></div>
               <div class="file-spec" id="file-size"></div>
-
+              <div class="size-error">
+                Your file exceeds the maximum allowed file size of 1 MB.
+              </div>
               <div class="upload-caption">
                 Upload your dataset in appropriate format (.xls, .txt, ...)
                 here.
@@ -69,10 +71,7 @@
         >
           <div class="triple-spinner"></div>
         </div>
-        <img
-          src="/static/images/Laplace1568152268.3212547.png"
-          id="data-histogram"
-        />
+        <img id="data-histogram" />
       </div>
     </div>
   </div>
