--- a/templates/dpml.html
+++ b/templates/dpml.html
@@ -18,6 +18,7 @@ Learning {% endblock %} {% block formFields %}
             min="0"
             max="100"
             step="1"
+            placeholder="0"
           />
         </div>
       </div>
@@ -28,6 +29,7 @@ Learning {% endblock %} {% block formFields %}
         max="100"
         step="1"
         id="epsilon-range"
+        value="0"
       />
     </div>
   </div>
@@ -43,7 +45,13 @@ Learning {% endblock %} {% block formFields %}
           <div class="input-group-prepend">
             <label for="lambda" class="input-group-text">Lambda</label>
           </div>
-          <input type="number" class="form-control" id="lambda" required />
+          <input
+            type="number"
+            class="form-control"
+            id="lambda"
+            required
+            placeholder="0"
+          />
         </div>
       </div>
       <div class="col-auto my-3">
@@ -51,7 +59,13 @@ Learning {% endblock %} {% block formFields %}
           <div class="input-group-prepend">
             <label for="degree" class="input-group-text">Degree</label>
           </div>
-          <input type="number" class="form-control" id="degree" required />
+          <input
+            type="number"
+            class="form-control"
+            id="degree"
+            required
+            placeholder="0"
+          />
         </div>
       </div>
       <div class="col-12"></div>
@@ -60,7 +74,13 @@ Learning {% endblock %} {% block formFields %}
           <div class="input-group-prepend">
             <label for="epochs" class="input-group-text">Epochs</label>
           </div>
-          <input type="number" class="form-control" id="epochs" required />
+          <input
+            type="number"
+            class="form-control"
+            id="epochs"
+            required
+            placeholder="0"
+          />
         </div>
       </div>
       <div class="col-auto my-3">
@@ -68,9 +88,42 @@ Learning {% endblock %} {% block formFields %}
           <div class="input-group-prepend">
             <label for="alpha" class="input-group-text">Alpha</label>
           </div>
-          <input type="number" class="form-control" id="alpha" required />
+          <input
+            type="number"
+            class="form-control"
+            id="alpha"
+            required
+            placeholder="0"
+          />
         </div>
       </div>
+    </div>
+    <div class="form-row align-items-center my-3">
+      <div class="col-auto">
+        <div class="input-group parameter-input">
+          <div class="input-group-prepend">
+            <label for="split" class="input-group-text">Split Ratio</label>
+          </div>
+          <input
+            type="number"
+            class="form-control range-value"
+            id="split"
+            min="0"
+            max="1"
+            placeholder="0"
+            step="0.05"
+          />
+        </div>
+      </div>
+      <input
+        type="range"
+        class="custom-range col"
+        min="0"
+        max="1"
+        step="0.05"
+        id="split-range"
+        value="0"
+      />
     </div>
   </div>
 </section>
@@ -83,6 +136,7 @@ Learning {% endblock %} {% block formFields %}
     var degree = document.getElementById("degree").value;
     var epochs = document.getElementById("epochs").value;
     var alpha = document.getElementById("alpha").value;
+    var alpha = document.getElementById("split").value;
 
     $(".data-graph")
       .addClass("visual-loading")
@@ -114,6 +168,8 @@ Learning {% endblock %} {% block formFields %}
         degree +
         "&epochs=" +
         epochs +
+        "&split=" +
+        split +
         "&alpha=" +
         alpha,
       true
