--- a/templates/upload.html
+++ b/templates/upload.html
@@ -125,7 +125,7 @@
         value="0"
       />
     </div>
-    <div class="form-row align-items-center my-3" data-hide="laplace staircase">
+    <div class="form-row align-items-center my-3" data-hide="laplace staircase median">
       <div class="col-auto">
         <div class="input-group parameter-input">
           <div class="input-group-prepend">
@@ -154,7 +154,7 @@
     </div>
     <div
       class="form-row align-items-center my-3"
-      data-hide="laplace boundedLaplace gaussian"
+      data-hide="laplace boundedLaplace gaussian median"
     >
       <div class="col-auto">
         <div class="input-group parameter-input">
