--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block bodyClass %}home-page{% endblock %} {% block
-preContent %}
+{% extends 'base.html' %} {% block title %}Machine Learning made Secure{%
+endblock %} {% block bodyClass %}home-page{% endblock %} {% block preContent %}
 <div
   id="login-modal"
   class="modal fade"
