--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Machine Learning made Secure{% endblock %}
 {% block content %}
 <section class="choose-task">
 		<header class="section-header pt-5 pb-4">
