--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %}{% block formTitle %}{% endblock %}{%
+endblock %} {% block content %}
 <section class="upload-full container">
   <header class="section-header pt-5 pb-4">
-    <h2 class="bottom-border">{% block formTitle %} {% endblock %}</h2>
+    <h2 class="bottom-border">{{ self.formTitle() }}</h2>
   </header>
   <div class="row justify-content-between align-items-center">
     <form class="form upload-form px-0 col-12 needs-validation">
